# health_tracker

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  wait-for-it.sh
app/: .env.example  alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 4c408229f8bd_created_follower_model.py  7412af1e26ea_added_phone_verification_mode.py  7facd45ed00c_added_avatar_field_to_user.py  f02c3296a464_added_user_models.py
app/core/: config.py  dependencies.py  exception_handler.py  logging_config.py
app/endpoints/: api.py  follower.py  health.py  stats.py  user.py
app/integrations/smsru/: client.py
app/integrations/yandex/: client.py
app/models/: __init__.py  follower.py  user.py
app/repositories/: follower_repository.py  stats_repository.py  user_repository.py
app/schemas/: follower.py  stats.py  user.py
app/services/: follower_service.py  stats_service.py  user_service.py
app/tests/: conftest.py  docker-compose.yml  test_user.py
app/tests/data/: user.py
