[project]
name = "health_tracker"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nazar@foxcom.lv", email = "nazar@foxcom.lv"},
]
dependencies = [
    "fastapi[all]>=0.113.0",
    "pydantic-settings>=2.4.0",
    "python-json-logger>=2.0.7",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
